test/extern/bradc/use-nonmodules/requireNonString.good
requireNonString.chpl:3: error: 'require' currently only accepts string literal arguments
