test/extern/bradc/use-nonmodules/requireNonString.chpl
var x: int;

require x;
